--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-		<activity android:name=".MainActivity">
+		<activity android:name=".ui.MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-
-			<meta-data
-				android:name="com.naver.maps.map.CLIENT_ID"
-				android:value="${BuildConfig.MAP_CLIENT_ID}" />
 		</activity>
+
+		<meta-data
+			android:name="com.naver.maps.map.CLIENT_ID"
+			android:value="@string/MAP_CLIENT_ID" />
 	</application>
 
 </manifest>
