[feat] Model & ViewModel 추가  - Model : Marker position 저장할 MarkerPos 데이터 외 Room 코드 추가  - ViewModel : Room 적용 코드 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,13 @@ dependencies {
 
     // 네이버 지도 SDK
     implementation 'com.naver.maps:map-sdk:3.7.1'
+
+    // coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    // room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 }
