--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
+    ext {
+        kotlin_version = '1.3.71'
+        coroutines_version = '1.3.0'
+        room_version = '2.2.5'
+    }
     repositories {
         google()
         jcenter()
