[build] API 통신을 위한 gradle & manifest 설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.foreknowledge.navermaptest">
 
+	<uses-permission android:name="android.permission.INTERNET" />
+
 	<application
 		android:name=".GlobalApplication"
 		android:allowBackup="true"
@@ -16,10 +18,6 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-
-		<meta-data
-			android:name="com.naver.maps.map.CLIENT_ID"
-			android:value="@string/MAP_CLIENT_ID" />
 	</application>
 
 </manifest>
