--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        resValue "string", "MAP_CLIENT_ID", apiKeyProperties['MAP_CLIENT_ID']
-        resValue "string", "MAP_CLIENT_SECRET", apiKeyProperties['MAP_CLIENT_SECRET']
+        buildConfigField("String", "NAVER_CLIENT_ID", apiKeyProperties['NAVER_CLIENT_ID'])
+        buildConfigField("String", "NAVER_CLIENT_SECRET", apiKeyProperties['NAVER_CLIENT_SECRET'])
     }
 
     buildTypes {
@@ -28,6 +28,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
     }
 
     dataBinding {
@@ -44,7 +49,7 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
 
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -60,4 +65,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 }
