--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = '1.3.71'
         coroutines_version = '1.3.0'
         room_version = '2.2.5'
+        retrofit_version = '2.7.2'
     }
     repositories {
         google()
